--- a/htmls/olvido.html
+++ b/htmls/olvido.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Login</title>
+    <title>Olvido</title>
     <link rel ="Stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
 </head>
@@ -10,7 +10,7 @@
     <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
     <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
 
-    <h1>Inicio de sesión</h1>
+    <h1>Recupera tu contraseña.</h1>
     <form method="post">
 
       <div class="username">
@@ -18,16 +18,13 @@
         <label>ID</label>
       </div>
 
-      <div class="password">
-        <input type="password">
-        <label>Contraseña</label>
-      </div>
-
-      <div class="recordar"><a href="olvido.html">Olvidé mi contraseña</a></div>
+      <input type="checkbox">
+      <label>Captcha</label>
 
     </form>
 
-    <a href="home.html"><button>Acceder</button></a>
+    <a href="index.html"><button>Enviar</button></a>
+    <a href="index.html"><button>Atrás</button></a>
     
   </div>
     
