Se agrega mas información a algunas vistas y se profundiza mas en Diligencias

--- a/htmls/diligencias.html
+++ b/htmls/diligencias.html
@@ -13,14 +13,26 @@
     <hr>
 
     <h4>¿Qué necesitas?</h4>
-    <form method="post">
-      <div class="catego">
-        <input type="text"
-        <label>Categoría</label>
-      </div>
+    
+    <div>
+      <input type="text">
+      <label>Categoría</label>
+    </div>
+    <div>
+      <input type="text">
+      <label>Servicio</label>
+    </div>
 
+    <button>Buscar</button>
+    <button>Historial</button>
 
-    </form>
+    <a href="titulacion.html">¿Necesitas ayuda con tu proceso de titulación?</a>
 
   </body>
+  <footer>
+    <section>
+      <p>Versión x.x</p>
+      <p>Ayuda</p>
+    </section>
+  </footer>
 </html>
