--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <label>Contraseña</label>
       </div>
 
-      <div class="recordar"><a href="olvido.html">Olvidé mi contraseña</a></div>
+      <div class="recordar"><a href="htmls/olvido.html">Olvidé mi contraseña</a></div>
 
     </form>
 
-    <a href="home.html"><button>Acceder</button></a>
+    <a href="htmls/home.html"><button>Acceder</button></a>
     
   </div>
     
