--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <h1>Inicio de sesión</h1>
     <form method="post">
 
-      <div class="username">
-        <input type="text">
-        <label>ID</label>
+      <div>
+        <input type="text" id="username" placeholder="ID" required>
       </div>
 
-      <div class="password">
-        <input type="password">
-        <label>Contraseña</label>
+      <div>
+        <input type="password" id="password" placeholder="Contraseña" required>
       </div>
 
       <div class="recordar"><a href="olvido.html">Olvidé mi contraseña</a></div>
+
+      <a href="home.html"><input type="submit"></a>
 
     </form>
 
