Rutas relativas para las imagenes

--- a/html/home.html
+++ b/html/home.html
@@ -6,8 +6,8 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <a href="home.html"><img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
-    <a href="perfil.html"><img src="imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
+    <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
+    <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
 
     <h1>¡Bienvenido Pedro!</h1>
     <h4><em>Este es tú progreso</em></h4>
