--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div>
-    <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
-    <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
+    <img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
+    <img src="../imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
 
     <h1>Inicio de sesión</h1>
     <form method="post">
