--- a/html/diligencias.html
+++ b/html/diligencias.html
@@ -4,8 +4,8 @@
       <title>Diligencias</title>
   </head>
   <body>
-    <a href="home.html"><img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
-    <a href="perfil.html"><img src="imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
+    <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
+    <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
 
     <h1>Tus diligencias</h1>
     
