--- a/html/perfil.html
+++ b/html/perfil.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <a href="home.html"><img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="120" height="40"></a>
+    <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="120" height="40"></a>
     <a href=""><img src="https://i.pinimg.com/originals/05/52/38/055238fdf052f396915ae60ca435daba.png" alt="Icono de un engranaje de opciones" width="40" height="40"></a>
     <a href=""><img src="https://cdn-icons-png.flaticon.com/512/40/40031.png" alt="Icono de un lápiz de edición" width="40" height="40"></a>
     <br>
-    <a href="perfil.html"><img src="imgs/Profile.jpg" alt="Icono de perfil" width="200" height="200"></a>
+    <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="200" height="200"></a>
 
 <h1>Pedro<br>Muñoz</h1>
 <p><em>ID 00085485454</em></p>
