Se cambian líneas de formulario para mas practicidad

--- a/diligencias.html
+++ b/diligencias.html
@@ -15,18 +15,30 @@
     <h4>¿Qué necesitas?</h4>
     
     <div>
-      <input type="text">
-      <label>Categoría</label>
+      <label for="categoria">Categoría</label>
+      <select id="categoria" lenght="200px">
+        <option value=""></option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
+
     </div>
     <div>
-      <input type="text">
-      <label>Servicio</label>
+
+      <label for="servicio">Servicio</label>
+      <select id="servicio">
+        <option value=""></option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
     </div>
 
     <button>Buscar</button>
     <button>Historial</button>
 
-    <a href="">¿Necesitas ayuda con tu proceso de titulación?</a>
+    <br><a href="">¿Necesitas ayuda con tu proceso de titulación?</a> 
 
   </body>
   <footer>
