--- a/olvido.html
+++ b/olvido.html
@@ -19,7 +19,7 @@
       </div>
 
       <input type="checkbox">
-      <label>Captcha</label>
+      <label>Captcha/No soy un robot</label>
 
     </form>
 
