cambio de sintaxis al home

--- a/html/home.html
+++ b/html/home.html
@@ -13,14 +13,24 @@
     <h4><em>Este es tú progreso</em></h4>
     <hr>
     <h2>Categorías</h2>
-    
-    <nav>
-      <a href="horarios.html"><button>Horarios</button></a>
-      <a href="notas.html"><button>Notas</button></a>
-      <a href="materias.html"><button>Materias</button></a>
-      <a href="encuestas.html"><button>Encuestas</button></a>
-      <a href="diligencias.html"><button>Diligencias</button></a>
-    </nav>
+
+    <section class = "botones">
+      <nav class = "Horario">
+        <a href="horarios.html"><button>Horarios</button></a>
+      </nav>
+      <nav class = "Notas">
+        <a href="notas.html"><button>Notas</button></a>
+      </nav>
+      <nav class = "Materias">
+        <a href="materias.html"><button>Materias</button></a>
+      </nav>
+      <nav class = "Encuestas">
+        <a href="encuestas.html"><button>Encuestas</button></a>
+      </nav>
+      <nav class = "Diligencias">
+        <a href="diligencias.html"><button>Diligencias</button></a>
+      </nav>
+    </section>
 
     <section>
       <p>Versión x.x</p>
