--- a/html/horarios.html
+++ b/html/horarios.html
@@ -4,6 +4,33 @@
     <title>Horarios</title>
 </head>
 <body>
-    
+    <div class = "Header">
+        <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
+        <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
+    </div>
+
+    <h1 id = "titulo">Tu Horario</h1>
+
+    <div>
+        <p id = "dias"><span>L</span>  <span>M</span>  <span>W</span>  <span>J</span>  <span>V</span>  <span>S</span></p>
+
+        <p id = "horas">
+            <span>6:00AM</span>  
+            <span>7:00AM</span>  
+            <span>8:00AM</span>  
+            <span>9:00AM</span>  
+            <span>10:00AM</span>  
+            <span>11:00AM</span>  
+            <span>12:00M</span>  
+            <span>1:00PM</span>  
+            <span>2:00PM</span>  
+            <span>3:00PM</span>  
+            <span>4:00PM</span>  
+            <span>5:00PM</span>  
+            <span>6:00PM</span>  
+            <span>7:00PM</span>  
+            <span>8:00PM</span>  
+        </p>
+    </div>
 </body>
 </html>
