--- a/html/encuestas.html
+++ b/html/encuestas.html
@@ -4,6 +4,19 @@
     <title>Encuestas</title>
 </head>
 <body>
-    
+    <div class = "Header">
+        <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
+        <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
+    </div>
+
+    <h1 id = "titulo">Encuestas</h1>
+
+    <div>
+        <nav>
+            <a><button>Encuesta 1</button></a>
+            <a><button>Encuesta 2</button></a>
+            <a><button>Encuesta 3</button></a>
+        </nav>
+    </div>
 </body>
 </html>
