--- a/html/materias.html
+++ b/html/materias.html
@@ -4,6 +4,33 @@
     <title>Materias</title>
 </head>
 <body>
-    
+    <div class = "Header">
+        <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
+        <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
+    </div>
+
+    <h1 id = "titulo">Tus materias</h1>
+
+    <section class = "semestre" id = "1">
+        <h4>semestre 1</h4>
+        <p>     <input type ="checkbox"> <span>materia 1</span></p>
+        <p>     <input type ="checkbox"> <span>materia 2</span></p>
+        <p>     <input type ="checkbox"> <span>materia 3</span></p>
+        <p>     <input type ="checkbox"> <span>materia 4</span></p>
+    </section>
+    <section class = "semestre" id = "2">
+        <h4>semestre 2</h4>
+        <p>     <input type ="checkbox"> <span>materia 1</span></p>
+        <p>     <input type ="checkbox"> <span>materia 2</span></p>
+        <p>     <input type ="checkbox"> <span>materia 3</span></p>
+        <p>     <input type ="checkbox"> <span>materia 4</span></p>
+    </section>
+    <section class = "semestre" id = "3">
+        <h4>semestre 3</h4>
+        <p>     <input type ="checkbox"> <span>materia 1</span></p>
+        <p>     <input type ="checkbox"> <span>materia 2</span></p>
+        <p>     <input type ="checkbox"> <span>materia 3</span></p>
+        <p>     <input type ="checkbox"> <span>materia 4</span></p>
+    </section>
 </body>
 </html>
