Sección de notas, junto a la expansión de las notas particulares

--- a/html/notas_expandidas.html
+++ b/html/notas_expandidas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Notas</title>
+    <title>Notas Expandidas</title>
 </head>
 <body>
     <div class = "Header">
@@ -16,6 +16,18 @@
             <h3><p>Materias     Créditos       Nota actual</p></h3>
             <section class = "clase" id = "1">
                 <p><a href="notas_expandidas.html"><button>Dibujo 1</button></a>    2       3.5</p>
+                <section class="detalles">
+                    <h3><p>Detalle     %       Nota</p></h3>
+                    <section class = "detalle" id = "1">
+                        <p>Diseño de personaje   20       3.5</p>
+                    </section>
+                    <section class = "detalle" id = "2">
+                        <p>Paletas de colores   10       3.5</p>
+                    </section>
+                    <section class = "detalle" id = "3">
+                        <p>Taller 1     15      3.5</p>
+                    </section>
+                </section>
             </section>
             <section class = "clase" id = "2">
                 <p><button>Animación 1</button>   2       4.0</p>
