Pequeño section en cada vista

--- a/html/encuestas.html
+++ b/html/encuestas.html
@@ -18,5 +18,10 @@
             <a><button>Encuesta 3</button></a>
         </nav>
     </div>
+
+    <section>
+        <p>Versión x.x</p>
+        <p>Ayuda</p>
+      </section>
 </body>
 </html>
