--- a/html/horarios.html
+++ b/html/horarios.html
@@ -32,5 +32,10 @@
             <span>8:00PM</span>  
         </p>
     </div>
+
+    <section>
+        <p>Versión x.x</p>
+        <p>Ayuda</p>
+      </section>
 </body>
 </html>
