--- a/html/notas.html
+++ b/html/notas.html
@@ -25,5 +25,10 @@
             </section>
         </section>
     </section>
+
+    <section>
+        <p>Versión x.x</p>
+        <p>Ayuda</p>
+      </section>
 </body>
 </html>
