--- a/html/materias.html
+++ b/html/materias.html
@@ -32,5 +32,10 @@
         <p>     <input type ="checkbox"> <span>materia 3</span></p>
         <p>     <input type ="checkbox"> <span>materia 4</span></p>
     </section>
+
+    <section>
+        <p>Versión x.x</p>
+        <p>Ayuda</p>
+      </section>
 </body>
 </html>
