--- a/html/notas_expandidas.html
+++ b/html/notas_expandidas.html
@@ -37,5 +37,10 @@
             </section>
         </section>
     </section>
+
+    <section>
+        <p>Versión x.x</p>
+        <p>Ayuda</p>
+      </section>
 </body>
 </html>
