--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div>
-    <img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
-    <img src="../imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
+    <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
+    <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
 
     <h1>Inicio de sesión</h1>
     <form method="post">
@@ -21,13 +21,13 @@
         <input type="password" id="password" placeholder="Contraseña" required>
       </div>
 
-      <div class="recordar"><a href="olvido.html">Olvidé mi contraseña</a></div>
+      <div class="recordar"><a href="html/olvido.html">Olvidé mi contraseña</a></div>
 
-      <a href="home.html"><input type="submit"></a>
+      <a href="html/home.html"><input type="submit"></a>
 
     </form>
 
-    <a href="home.html"><button>Acceder</button></a>
+    <a href="html/home.html"><button>Acceder</button></a>
     
   </div>
     
