Actualización olvido.html

--- a/html/olvido.html
+++ b/html/olvido.html
@@ -23,8 +23,8 @@
 
     </form>
 
-    <a href="index.html"><button>Enviar</button></a>
-    <a href="index.html"><button>Atrás</button></a>
+    <a href="../index.html"><button>Enviar</button></a>
+    <a href="../index.html"><button>Atrás</button></a>
     
   </div>
     
