--- a/index.html
+++ b/index.html
@@ -6,34 +6,68 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-  <div>
-    <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
-    <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
+  <header>
+    <div class="logos">
+      <div class="logo1">
+        <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
+      </div>
+  
+    <h1>SIGAA</h1>
 
-    <h1>Inicio de sesión</h1>
-    <form method="post">
+      <div class="logo2">
+        <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
+      </div>
+    </div>
+  </header>
+  
+  <div class="formulario">
 
-      <div>
-        <input type="text" id="username" placeholder="ID" required>
+    <div class="titulo">
+      <h1>Inicio de sesión</h1>
+    </div>
+
+    <form action="/Proyecto-Sigaa/html/home.html" method="get">
+
+      <div class="campo">
+        <input type="text" required>
+        <label for="#">ID</label>
       </div>
 
-      <div>
-        <input type="password" id="password" placeholder="Contraseña" required>
+      <div class="campo">
+        <input type="password" required>
+        <label for="#">Contraseña</label>
       </div>
 
-      <div class="recordar"><a href="html/olvido.html">Olvidé mi contraseña</a></div>
+      <div class="content">
+        <div class="checkbox">
+          <input type="checkbox" id="recordar">
+          <label for="recordar">Recuérdame</label>
+        </div>
 
-      <a href="html/home.html"><input type="submit"></a>
+        <div class="pass-link">
+          <a href="#">Olvidé mi contraseña</a>
+        </div>
+      </div>
+
+      <div class="campo">
+        <input type="submit" value="Iniciar Sesión">
+      </div>
+
+
+      <!--<div class="boton-enviar"></div>
+      <a href="html/home.html">
+        <input type="submit">
+      </a>
+      -->
 
     </form>
 
-    <a href="html/home.html"><button>Acceder</button></a>
-    
   </div>
-    
-    <section>
-      <p>Versión x.x</p>
-      <p>Ayuda</p>
-    </section>
+
+  <div class="footer">
+    <p>Versión x.x</p>
+    <p>Ayuda</p>
+  </div>
+  
 </body>
 </html>
