Avances en CSS del Home y Olvido de contraseña

--- a/html/home.html
+++ b/html/home.html
@@ -21,37 +21,55 @@
     </div>
   </header>
 
-  <div class="bienvenido">
-    <h1>¡Bienvenido Pedro!</h1>
+  <div class="inicio">
+    <div class="bienvenida-conten">
+      <div class="bienvenido">
+        <h1>¡Bienvenido </h1>
+      </div>
+      <div>  
+        <h1 class="nombre"><a href="../html/perfil.html">Juan!</a></h1>
+      </div>
+    </div>
+
     <div class="progreso">
-      <h4>Este es tú progreso</h4>
+      <div class="titulo-progreso"><h4>Este es tú progreso</h4></div>
+      <div class="barra-base"> <a href="../html/notas.html"><img src="../imgs/bar-progress.png" alt=""></a></div>
     </div>
   </div>
-    
-  <div class="caterogia-contenedor"></div>
-    <hr>
-    <h2>Categorías</h2>
 
-  <div class = "botones">
-    <nav class = "Horario">
-      <a href="horarios.html"><button>Horarios</button></a>
-    </nav>
-    <nav class = "Notas">
-      <a href="notas.html"><button>Notas</button></a>
-    </nav>
-    <nav class = "Materias">
-      <a href="materias.html"><button>Materias</button></a>
-    </nav>
-    <nav class = "Encuestas">
-      <a href="encuestas.html"><button>Encuestas</button></a>
-    </nav>
-    <nav class = "Diligencias">
-      <a href="diligencias.html"><button>Diligencias</button></a>
-    </nav>
+  <div class="fondo"> </div>
+
+  <div class="categoria-contenedor">
+
+    <div class="titulo">
+      <h2>Categorías</h2>
+    </div>
+
+    <div class = "botones">
+      <nav class = "boton">
+        <img src="../imgs/horario.png" alt="Horarios">
+        <a href="horarios.html"><button>Horarios</button></a>
+      </nav>
+      <nav class = "boton">
+        <img src="../imgs/notas.png" alt="Notas">
+        <a href="notas.html"><button>Notas</button></a>
+      </nav>
+      <nav class = "boton">
+        <img src="../imgs/materias.png" alt="Materias">
+        <a href="materias.html"><button>Materias</button></a>
+      </nav>
+      <nav class = "boton">
+        <img src="../imgs/encuesta.png" alt="Encuesta">
+        <a href="encuestas.html"><button>Encuestas</button></a>
+      </nav>
+      <nav class = "boton">
+        <img src="../imgs/diligencias.png" alt="Diligencias">
+        <a href="diligencias.html"><button>Diligencias</button></a>
+      </nav>
+    </div>
   </div>
-
   <div class="footer">
-      <p>Versión x.x</p>
+      <p>Versión 0.1</p>
       <p>Ayuda</p>
   </div>
       
