--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/main.js"></script>
 </head>
 <body>
+  
   <header>
     <div class="logos">
       <div class="logo1">
@@ -20,6 +21,8 @@
     </div>
   </header>
   
+  <div class="fondo"> </div>
+
   <div class="formulario">
 
     <div class="titulo">
@@ -45,7 +48,7 @@
         </div>
 
         <div class="pass-link">
-          <a href="#">Olvidé mi contraseña</a>
+          <a href="./html/olvido.html">Olvidé mi contraseña</a>
         </div>
       </div>
 
@@ -65,8 +68,8 @@
   </div>
 
   <div class="footer">
-    <p>Versión x.x</p>
-    <p>Ayuda</p>
+    <p>Este sitio web usa cookies.</p>
+    <p>Políticas de Privacidad</p>
   </div>
   
 </body>
