--- a/html/home.html
+++ b/html/home.html
@@ -2,22 +2,44 @@
 <html lang="es">
 <head>
     <title>Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel ="Stylesheet" href="/Proyecto-Sigaa/css/home.css">
-    <script src="js/main.js"></script>
 </head>
 <body>
     
   <header>
 
-    <div class="header-cont">
+    <div class="navbar">
       <div class="home">
         <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB"></a>
       </div>
 
-    <div class="perfil">
-    <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil"></a>
+      <ul class="links">
+          <li><a href="https://www.upb.edu.co/es/home">UPB Web</a></li>
+          <li><a href="https://virtual.upb.edu.co/d2l/login">Brightspace</a></li>
+          <li><a href="https://sso.upb.edu.co/authenticationendpoint/login.do?RelayState=https%3A%2F%2Fauladigital.upb.edu.co%2F&commonAuthCallerPath=%2Fsamlsso&forceAuth=false&passiveAuth=false&tenantDomain=carbon.super&sessionDataKey=be61a26d-c35c-4b88-8c01-9dfb31201a1e&relyingParty=https%3A%2F%2Fauladigital.upb.edu.co%2Fauth%2Fsaml2%2Fsp%2Fmetadata.php&type=samlsso&sp=auladigital.upb.edu.co&isSaaSApp=false&authenticators=BasicAuthenticator%3ALOCAL">
+            Moodle</a></li>
+          <li><a href="https://www.upb.edu.co/es/open">UPB Open</a></li>
+      </ul>
+
+
+      <div class="menu_btn">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
+      <div class="perfil">
+      <a href="perfil.html"><img src="../imgs/profile.png" alt="Icono de perfil"></a>
+      </div>
     </div>
 
+    <div class="dropdown_menu">
+      <li><a href="https://www.upb.edu.co/es/home">UPB Web</a></li>
+        <li><a href="https://virtual.upb.edu.co/d2l/login">Brightspace</a></li>
+        <li><a href="https://sso.upb.edu.co/authenticationendpoint/login.do?RelayState=https%3A%2F%2Fauladigital.upb.edu.co%2F&commonAuthCallerPath=%2Fsamlsso&forceAuth=false&passiveAuth=false&tenantDomain=carbon.super&sessionDataKey=be61a26d-c35c-4b88-8c01-9dfb31201a1e&relyingParty=https%3A%2F%2Fauladigital.upb.edu.co%2Fauth%2Fsaml2%2Fsp%2Fmetadata.php&type=samlsso&sp=auladigital.upb.edu.co&isSaaSApp=false&authenticators=BasicAuthenticator%3ALOCAL">
+          Moodle</a></li>
+        <li><a href="https://www.upb.edu.co/es/open">UPB Open</a></li>
     </div>
   </header>
 
@@ -73,5 +95,7 @@
       <p>Ayuda</p>
   </div>
       
+  <script src="../js/main.js"></script>
+
 </body>
 </html>
