--- a/html/perfil.html
+++ b/html/perfil.html
@@ -1,53 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <title>Perfil</title>
+    <link rel ="Stylesheet" href="../css/perfil.css">
 </head>
 
 <body>
-    <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="120" height="40"></a>
-    <a href=""><img src="https://i.pinimg.com/originals/05/52/38/055238fdf052f396915ae60ca435daba.png" alt="Icono de un engranaje de opciones" width="40" height="40"></a>
-    <a href=""><img src="https://cdn-icons-png.flaticon.com/512/40/40031.png" alt="Icono de un lápiz de edición" width="40" height="40"></a>
-    <br>
-    <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="200" height="200"></a>
+    
+  <header>
 
-<h1>Pedro<br>Muñoz</h1>
-<p><em>ID 00085485454</em></p>
-<p><em>pedro.munoz@upb.edu.co</em></p>
+    <div class="navbar">
+      <div class="home">
+        <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB"></a>
+      </div>
 
-<hr>
-<h3>Información adicional</h3>
+      <ul class="links">
+          <li><a href="https://www.upb.edu.co/es/home">UPB Web</a></li>
+          <li><a href="https://virtual.upb.edu.co/d2l/login">Brightspace</a></li>
+          <li><a href="https://sso.upb.edu.co/authenticationendpoint/login.do?RelayState=https%3A%2F%2Fauladigital.upb.edu.co%2F&commonAuthCallerPath=%2Fsamlsso&forceAuth=false&passiveAuth=false&tenantDomain=carbon.super&sessionDataKey=be61a26d-c35c-4b88-8c01-9dfb31201a1e&relyingParty=https%3A%2F%2Fauladigital.upb.edu.co%2Fauth%2Fsaml2%2Fsp%2Fmetadata.php&type=samlsso&sp=auladigital.upb.edu.co&isSaaSApp=false&authenticators=BasicAuthenticator%3ALOCAL">
+            Moodle</a></li>
+          <li><a href="https://www.upb.edu.co/es/open">UPB Open</a></li>
+      </ul>
 
-<div>
-  <div>
-    <input type="date">
-    <h4>Fecha de nacimiento</h4>
-  </div>
-  <div>
-    <input type="text">
-    <h4>Sexo</h4>
-  </div>
-  <div>
-    <input type="email">
-    <h4>Correo personal</h4>
-  </div>
-  <div>
-    <input type="text">
-    <h4>Dirección actual</h4>
-  </div>
-  <div>
-    <input type="tel">
-    <h4>Teléfono celular</h4>
-  </div>
-  <div>
-    <input type="tel">
-    <h4>Teléfono fijo</h4>
-  </div>
-</div>
-  
-<a href=""><h4>Agregar Información</h4></a>
 
+      <div class="menu_btn">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
+    </div>
+
+    <div class="dropdown_menu">
+      <li><a href="https://www.upb.edu.co/es/home">UPB Web</a></li>
+      <li><a href="https://virtual.upb.edu.co/d2l/login">Brightspace</a></li>
+      <li><a href="https://sso.upb.edu.co/authenticationendpoint/login.do?RelayState=https%3A%2F%2Fauladigital.upb.edu.co%2F&commonAuthCallerPath=%2Fsamlsso&forceAuth=false&passiveAuth=false&tenantDomain=carbon.super&sessionDataKey=be61a26d-c35c-4b88-8c01-9dfb31201a1e&relyingParty=https%3A%2F%2Fauladigital.upb.edu.co%2Fauth%2Fsaml2%2Fsp%2Fmetadata.php&type=samlsso&sp=auladigital.upb.edu.co&isSaaSApp=false&authenticators=BasicAuthenticator%3ALOCAL">
+        Moodle</a></li>
+      <li><a href="https://www.upb.edu.co/es/open">UPB Open</a></li>
+    </div>
+
+  </header>
+
+  <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="120" height="40"></a>
+  <a href=""><img src="https://i.pinimg.com/originals/05/52/38/055238fdf052f396915ae60ca435daba.png" alt="Icono de un engranaje de opciones" width="40" height="40"></a>
+  <a href=""><img src="https://cdn-icons-png.flaticon.com/512/40/40031.png" alt="Icono de un lápiz de edición" width="40" height="40"></a>
+
+    <div class="info_principal">
+      <img src="../imgs/profile.png" alt="">
+      <h1>Pedro Muñoz</h1>
+      <p>ID 00085485454</p>
+      <p>pedro.munoz@upb.edu.co</p>
+    </div>
+
+  <div class="info_conten">
+    <div class="titulo">
+      <h3>Información adicional</h3>
+    </div>
+
+    <form action="/Proyecto-Sigaa/html/home.html" method="get">
+      <div class="info">
+        <input type="date">
+        <label for="#">Fecha de nacimiento</label>
+      </div>
+      <div class="info">
+        <input type="text">
+        <label for="#">Sexo</label>
+      </div>
+      <div class="info">
+        <input type="email">
+        <label for="#">Correo personal</label>
+      </div>
+      <div class="info">
+        <input type="text">
+        <label for="#">Dirección actual</label>
+      </div>
+      <div class="info">
+        <input type="tel">
+        <label for="#">Telefono celular</label>
+      </div>
+      <div class="info">
+        <input type="tel">
+        <label for="#">Telefono fijo</label>
+    </form>
+    </div>
+  </div>
+    
+  <div class="agregar_info">
+    <a href=""><h4>Agregar Información</h4></a>
+  </div>
+
+  <div class="footer">
+    <p>Versión 0.1</p>
+    <p>Ayuda</p>
+  </div>
+
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
