Responsive Design en el 'formulario' del perfil

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -3,6 +3,9 @@
 <head>
     <title>Perfil</title>
     <link rel ="Stylesheet" href="../css/perfil.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -55,7 +58,7 @@
       <h3>Información adicional</h3>
     </div>
 
-    <form action="/Proyecto-Sigaa/html/home.html" method="get">
+    <form action="./perfil.html" method="get">
       <div class="info">
         <input type="date">
         <label for="#">Fecha de nacimiento</label>
