--- a/index.html
+++ b/index.html
@@ -1,76 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <title>Login</title>
-    <link rel ="Stylesheet" href="css/main.css">
-    <script src="js/main.js"></script>
+
+<html lang="es"><head>
+  <title>Login</title>
+  <link rel="Stylesheet" href="css/main.css">
+  <script src="js/main.js"></script>
 </head>
+
 <body>
-  
-  <header>
-    <div class="logos">
-      <div class="logo1">
-        <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
-      </div>
-  
-    <h1>SIGAA</h1>
+  <div>
+    <img src="imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70">
+    <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
 
-      <div class="logo2">
-        <img src="imgs/logoUPB2.jpeg" alt="El logo de la UPB negro" width="180" height="70">
-      </div>
-    </div>
-  </header>
-  
-  <div class="fondo"> </div>
+    <h1>Inicio de sesión</h1>
+    <form method="post">
 
-  <div class="formulario">
-
-    <div class="titulo">
-      <h1>Inicio de sesión</h1>
-    </div>
-
-    <form action="/Proyecto-Sigaa/html/home.html" method="get">
-
-      <div class="campo">
-        <input type="text" required>
-        <label for="#">ID</label>
+      <div>
+        <input type="text" id="username" placeholder="ID" required="">
       </div>
 
-      <div class="campo">
-        <input type="password" required>
-        <label for="#">Contraseña</label>
+      <div>
+        <input type="password" id="password" placeholder="Contraseña" required="">
       </div>
 
-      <div class="content">
-        <div class="checkbox">
-          <input type="checkbox" id="recordar">
-          <label for="recordar">Recuérdame</label>
-        </div>
+      <div class="recordar"><a href="html/olvido.html">Olvidé mi contraseÃ±a</a></div>
 
-        <div class="pass-link">
-          <a href="./html/olvido.html">Olvidé mi contraseña</a>
-        </div>
-      </div>
-
-      <div class="campo">
-        <input type="submit" value="Iniciar Sesión">
-      </div>
-
-
-      <!--<div class="boton-enviar"></div>
-      <a href="html/home.html">
-        <input type="submit">
-      </a>
-      -->
+      <a href="html/home.html"><input type="submit"></a>
 
     </form>
 
+    <a href="html/home.html"><button>Acceder</button></a>
+    
   </div>
+    
+    <section>
+      <p>Versión x.x</p>
+      <p>Ayuda</p>
+    </section>
 
-  <div class="footer">
-    <p>Este sitio web usa cookies.</p>
-    <p>Políticas de Privacidad</p>
-  </div>
-  
-</body>
-</html>
+</body></html>
