Vuelta a los archivos originales 2

--- a/html/home.html
+++ b/html/home.html
@@ -1,102 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <title>Home</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel ="Stylesheet" href="/Proyecto-Sigaa/css/home.css">
+<html lang="es"><head>
+  <title>Home</title>
+  <link rel="Stylesheet" href="css/main.css">
+  <script src="js/main.js"></script>
 </head>
 <body>
+  <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
+  <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
+
+  <h1>¡Bienvenido Pedro!</h1>
+  <h4><em>Este es tú progreso</em></h4>
+  <hr>
+  <h2>Categorías</h2>
+
+  <section class="botones">
+    <nav class="Horario">
+      <a href="horarios.html"><button>Horarios</button></a>
+    </nav>
+    <nav class="Notas">
+      <a href="notas.html"><button>Notas</button></a>
+    </nav>
+    <nav class="Materias">
+      <a href="materias.html"><button>Materias</button></a>
+    </nav>
+    <nav class="Encuestas">
+      <a href="encuestas.html"><button>Encuestas</button></a>
+    </nav>
+    <nav class="Diligencias">
+      <a href="diligencias.html"><button>Diligencias</button></a>
+    </nav>
+  </section>
+
+  <section>
+    <p>Versión x.x</p>
+    <p>Ayuda</p>
+  </section>
     
-  <header>
 
-    <div class="navbar">
-      <div class="home">
-        <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB"></a>
-      </div>
-
-      <ul class="links">
-          <li><a href="https://www.upb.edu.co/es/home">UPB Web</a></li>
-          <li><a href="https://virtual.upb.edu.co/d2l/login">Brightspace</a></li>
-          <li><a href="https://sso.upb.edu.co/authenticationendpoint/login.do?RelayState=https%3A%2F%2Fauladigital.upb.edu.co%2F&commonAuthCallerPath=%2Fsamlsso&forceAuth=false&passiveAuth=false&tenantDomain=carbon.super&sessionDataKey=be61a26d-c35c-4b88-8c01-9dfb31201a1e&relyingParty=https%3A%2F%2Fauladigital.upb.edu.co%2Fauth%2Fsaml2%2Fsp%2Fmetadata.php&type=samlsso&sp=auladigital.upb.edu.co&isSaaSApp=false&authenticators=BasicAuthenticator%3ALOCAL">
-            Moodle</a></li>
-          <li><a href="https://www.upb.edu.co/es/open">UPB Open</a></li>
-      </ul>
-
-
-      <div class="menu_btn">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-
-      <div class="perfil">
-      <a href="perfil.html"><img src="../imgs/profile.png" alt="Icono de perfil"></a>
-      </div>
-    </div>
-
-    <div class="dropdown_menu">
-      <li><a href="https://www.upb.edu.co/es/home">UPB Web</a></li>
-      <li><a href="https://virtual.upb.edu.co/d2l/login">Brightspace</a></li>
-      <li><a href="https://sso.upb.edu.co/authenticationendpoint/login.do?RelayState=https%3A%2F%2Fauladigital.upb.edu.co%2F&commonAuthCallerPath=%2Fsamlsso&forceAuth=false&passiveAuth=false&tenantDomain=carbon.super&sessionDataKey=be61a26d-c35c-4b88-8c01-9dfb31201a1e&relyingParty=https%3A%2F%2Fauladigital.upb.edu.co%2Fauth%2Fsaml2%2Fsp%2Fmetadata.php&type=samlsso&sp=auladigital.upb.edu.co&isSaaSApp=false&authenticators=BasicAuthenticator%3ALOCAL">
-        Moodle</a></li>
-      <li><a href="https://www.upb.edu.co/es/open">UPB Open</a></li>
-    </div>
-
-  </header>
-
-  <div class="inicio">
-    <div class="bienvenida-conten">
-      <div class="bienvenido">
-        <h1>¡Bienvenido </h1>
-      </div>
-      <div>  
-        <h1 class="nombre"><a href="../html/perfil.html">Juan!</a></h1>
-      </div>
-    </div>
-
-    <div class="progreso">
-      <div class="titulo-progreso"><h4>Este es tú progreso</h4></div>
-      <div class="barra-base"> <a href="../html/notas.html"><img src="../imgs/bar-progress.png" alt=""></a></div>
-    </div>
-  </div>
-
-  <div class="fondo"> </div>
-
-  <div class="categoria-contenedor">
-
-    <div class="titulo">
-      <h2>Categorías</h2>
-    </div>
-
-    <div class = "botones">
-      <nav class = "boton">
-        <img src="../imgs/horario.png" alt="Horarios">
-        <a href="horarios.html"><button>Horarios</button></a>
-      </nav>
-      <nav class = "boton">
-        <img src="../imgs/notas.png" alt="Notas">
-        <a href="notas.html"><button>Notas</button></a>
-      </nav>
-      <nav class = "boton">
-        <img src="../imgs/materias.png" alt="Materias">
-        <a href="materias.html"><button>Materias</button></a>
-      </nav>
-      <nav class = "boton">
-        <img src="../imgs/encuesta.png" alt="Encuesta">
-        <a href="encuestas.html"><button>Encuestas</button></a>
-      </nav>
-      <nav class = "boton">
-        <img src="../imgs/diligencias.png" alt="Diligencias">
-        <a href="diligencias.html"><button>Diligencias</button></a>
-      </nav>
-    </div>
-  </div>
-  <div class="footer">
-      <p>Versión 0.1</p>
-      <p>Ayuda</p>
-  </div>
-      
-  <script src="../js/main.js"></script>
-
-</body>
-</html>
+</body></html>
