--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="password" id="password" placeholder="Contraseña" required="">
       </div>
 
-      <div class="recordar"><a href="html/olvido.html">Olvidé mi contraseÃ±a</a></div>
+      <div class="recordar"><a href="html/olvido.html">Olvidé mi contraseña</a></div>
 
       <a href="html/home.html"><input type="submit"></a>
 
