--- a/html/home.html
+++ b/html/home.html
@@ -7,12 +7,14 @@
 <body>
   <a href="home.html"><img src="../imgs/logoUPB.jpeg" alt="El logo de la UPB" width="180" height="70"></a>
   <a href="perfil.html"><img src="../imgs/Profile.jpg" alt="Icono de perfil" width="100" height="100"></a>
-
-  <h1>¡Bienvenido Pedro!</h1>
-  <h4><em>Este es tú progreso</em></h4>
-  <hr>
-  <h2>Categorías</h2>
-
+  
+  <div class="texto">
+    <h1 class ="titulo">¡Bienvenido Pedro!</h1>
+    <h4 class = "barra" ><em>Este es tú progreso</em></h4>
+    <hr>
+    <h2 class = "categorias">Categorías</h2>
+  </div>
+  
   <section class="botones">
     <nav class="Horario">
       <a href="horarios.html"><button>Horarios</button></a>
